chore: SonarQube integration, code cleanup, fix code smells